# Prefect-Postgres-Docker-Template

./: .gitignore  Dockerfile  README.md  compose.yaml  example.env
orchestrator/: main.py  pyproject.toml  requirements.txt
orchestrator/prefect_app/app/pipelines/hello_world/: deployment.py
orchestrator/prefect_app/app/pipelines/hello_world/flows/: main_flow.py
orchestrator/prefect_app/app/pipelines/hello_world/tasks/: hello.py
orchestrator/prefect_app/app/pipelines/hello_world/utils/: date.py
orchestrator/prefect_app/deployments/: hello_world.py
orchestrator/prefect_app/flows/: hello_world.py
orchestrator/prefect_app/tasks/: hello.py
